# Educational_cpp_project

./: CMakeLists.txt  main.cpp
DataStructures/: Histogram.h  SubstringAnalyzer.h
Map/: HashMap.h  IDictionary.h
Sequence/: Sequence.h
Sort/: BatcherSort.h  QuickSort.h
Tests/AS_LLS_test/: Tests_AS and LLS.cpp
Tests/DA_LL_test/: Tests_DA and LL.cpp
Tests/Histogram_test/: Histogram_test.h
Tests/Matrix_test/: Tests_Matrix.cpp
Tests/Sort_test/: LoadTests.h  SortTest.h
Tests/Vector_test/: Tests_Vector.cpp
interface_menu/: MenuAll.h
interface_menu/Matrix_menu/: MenuMatrix.cpp  MenuMatrix.h
interface_menu/Sequence_menu/: MenuSequence.cpp  MenuSequence.h
interface_menu/Sort_menu/: MenuSort.h
interface_menu/Vector_menu/: MenuVector.cpp  MenuVector.h
